--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="methodology-block sampling-block">
       <div class="methodology-copy">
         <p class="method-kicker">Data construction & sampling strategy</p>
-        <h4 class="method-block-title">Méthodologie</h4>
+        <h4 class="method-block-title">Methodology</h4>
         <ul class="method-list">
           <li><strong>Stock selection.</strong> The initial dataset (more than 8,000 assets) required rigorous selection to create a representative and usable sample.</li>
           <li><strong>Exclusion of ETFs.</strong> These instruments are composed of several stocks, often from different sectors. We excluded them to avoid ambiguity in sector analysis.</li>
