--- a/index.html
+++ b/index.html
@@ -35,8 +35,12 @@
 
 <div class="hero-bridge">
   <p class="bridge-kicker">Abstract</p>
-  <p class="bridge-text">
-        Over the past 25 years, the world has been repeatedly shaken by events that escaped prediction and control. Terrorist attacks, natural disasters, technological breakthroughs, political ruptures, and global health crises have punctuated recent history.
+  <p>
+    We believe that financial markets are not just cold algorithms or rational systems. They are living, social organisms, shaped by human emotions, communication, and collective excitement or fear. Beneath the charts and models lies a system that reacts, hesitates, panics, adapts, and sometimes heals.
+  </p>
+  <p>
+    Over the past 25 years, the world has been repeatedly shaken by events that escaped prediction and control. Terrorist attacks, natural disasters, technological breakthroughs, political ruptures, and global health crises have punctuated recent history. Each time, markets responded almost instantly. Not by thinking, but by feeling. Fear turned into volatility. Hope into rallies. Uncertainty into sharp, collective movements across sectors.
+  </p>
 </div>
 
 <div style="width: 100%; height: 750px;">
@@ -52,12 +56,17 @@
 <div class="hero-intro animate-intro" id="intro">
     <p class="intro-label">A market seen through its pulse</p>
     <p class="intro-text">
-      Financial markets are not just cold algorithms or rational systems. They are living, social organisms shaped by collective excitement and fear. Beneath charts and models lies a system that reacts, hesitates, panics and adapts.
+      At first glance, the evolution of the NASDAQ 100 between 2000 and 2025 appears almost uneventful. A steady ascent, interrupted by temporary drops, followed by recovery. The kind of curve that suggests control, stability, and long-term growth..
       <br><br>
-      At first glance, the NASDAQ 100 from 2000 to 2025 appears stable as a long-term rise. Yet the curve is not smooth,  just like a pulse under stress. It carries drops, recoveries and sudden disruptions moments when the market loses its balance.
+      But a closer look tells a different story.
       <br><br>
-      Some of these movements align with major events, such as the 2008 financial crisis. Others remain harder to explain. We will examine six landmark U.S. events to explore how crises translate into market behavior.
+      The curve is not smooth. It carries scars. Its rhythm is irregular, marked by a handful of sharp disruptions, moments where the market suddenly loses its balance. These breaks stand out clearly, even without analysis. They are too pronounced to be dismissed as noise.
+      <br><br>
+      Like a pulse under stress, the market accelerates, stumbles, and hesitates. And each time it does, something in the external world has changed.
+      <br><br>
+      By simply observing the overall shape of the curve, six moments emerge. They do not announce themselves loudly, but they leave unmistakable traces. Each corresponds to a moment when the market’s rhythm was disturbed.
     </p>
+
 </div>
 
     <div class="intro-research" id="research-questions">
